--- a/package.json
+++ b/package.json
@@ -1,16 +1,21 @@
 {
   "dependencies": {
-    "@babel/preset-react": "^7.12.13",
+    "@babel/preset-react": "^7.13.13",
     "@rails/webpacker": "5.2.1",
     "@tailwindcss/postcss7-compat": "^2.0.4",
     "autoprefixer": "^9",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
+    "bootstrap": "^5.0.1",
     "html-webpack-harddisk-plugin": "^2.0.0",
     "html-webpack-plugin": "^4.5.2",
+    "jquery": "^3.6.0",
+    "popper.js": "^1.16.1",
     "postcss": "^7",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.2.0",
+    "react_ujs": "^2.6.1",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat"
   },
   "devDependencies": {
